--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,18 +1,44 @@
-<header class="hero-unit" id="banner">
-  <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
-  </div>
-</header>
+<navbar>
+  <div class="main">
 
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in main.awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
-      </ul>
+    <accordion close-others="oneAtATime">
+      <accordion-group heading="Server Name" is-open="false">
+        Server Details
+      </accordion-group>
+      <!-- <accordion-group heading="{{group.title}}" ng-repeat="group in groups">
+        {{group.content}}
+      </accordion-group>
+      <accordion-group heading="Dynamic Body Content">
+        <p>The body of the accordion group grows to fit the contents</p>
+          <button class="button small" ng-click="addItem()">Add Item</button>
+          <div ng-repeat="item in items">{{item}}</div>
+      </accordion-group>
+      <accordion-group is-open="isopen">
+          <accordion-heading>
+              I can have markup, too!
+          </accordion-heading>
+          This is just some content to illustrate fancy headings.
+      </accordion-group> -->
+    </accordion>
+  </div>
+
+  <!-- <header class="hero-unit" id="banner">
+    <div class="container">
+      <h1>'Allo, 'Allo!</h1>
+      <p class="lead">Kick-start your next web app with Angular Fullstack</p>
+      <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+    </div>
+  </header>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <h1 class="page-header">Features:</h1>
+        <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in main.awesomeThings">
+          <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
+   -->
+</navbar>
